--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -39,7 +39,7 @@
 		</div>
 	</div>
 
-	<div class="modal modal_active">
+	<div class="modal">
 		<div class="modal__container">
 			<button class="modal__close" aria-label="закрыть"></button>
 			<div class="modal__content">
@@ -48,7 +48,7 @@
 					<div class="card__column">
 						<span class="card__category card__category_other">другое</span>
 						<h2 class="card__title">Бэкенд-антистресс</h2>
-						<p class="card__text">Если планируете решать задачи в тренажёре, берите два.</p>
+						<p class="card__description">Если планируете решать задачи в тренажёре, берите два.</p>
 						<div class="card__row">
 							<button class="button">В корзину</button>
 							<span class="card__price">1000 синапсов</span>
@@ -179,7 +179,7 @@
 			<div class="card__column">
 				<span class="card__category card__category_other">другое</span>
 				<h2 class="card__title">Бэкенд-антистресс</h2>
-				<p class="card__text">Если планируете решать задачи в тренажёре, берите два.</p>
+				<p class="card__description">Если планируете решать задачи в тренажёре, берите два.</p>
 				<div class="card__row">
 					<button class="button card__button">В корзину</button>
 					<span class="card__price">1000 синапсов</span>
