--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -27,7 +27,7 @@
 			</div>
 		</header>
 
-		<main class="gallery"></main>
+		<main id="app-container" class="gallery"></main>
 	</div>
 
 	<div class="modal" id="modal-container">
