--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -31,7 +31,7 @@
 	</div>
 
 	<div class="modal" id="modal-container">
-		<div class="modal__container">
+		<div class="modal__content">
 			<button class="modal__close" aria-label="закрыть"></button>
 			<div class="modal__content">
 
