--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -31,11 +31,9 @@
 	</div>
 
 	<div class="modal" id="modal-container">
-		<div class="modal__content">
+		<div class="modal__container">
 			<button class="modal__close" aria-label="закрыть"></button>
-			<div class="modal__content">
-
-			</div>
+			<div class="modal__content"></div>
 		</div>
 	</div>
 
@@ -50,7 +48,7 @@
 						<h2 class="card__title">Бэкенд-антистресс</h2>
 						<p class="card__description">Если планируете решать задачи в тренажёре, берите два.</p>
 						<div class="card__row">
-							<button class="button">В корзину</button>
+							<button class="button card__button">В корзину</button>
 							<span class="card__price">1000 синапсов</span>
 						</div>
 					</div>
@@ -174,7 +172,7 @@
 	</template>
 
 	<template id="card-preview">
-		<div class="card card_full">
+		<div class="card card_full" data-id="...">
 			<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
 			<div class="card__column">
 				<span class="card__category card__category_other">другое</span>
