--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -207,26 +207,40 @@
 	</template>
 
 	<template id="order">
-		<form class="form" name="order">
-			<div class="order">
+		<div class="modal__container">
+		  <button class="modal__close" aria-label="закрыть"></button>
+		  <div class="modal__content">
+			<form class="form" name="order">
+			  <div class="order">
 				<div class="order__field">
-					<h2 class="modal__title">Способ оплаты</h2>
-					<div class="order__buttons">
-						<button name="card" type="button" class="button button_alt">Онлайн</button>
-						<button name="cash" type="button" class="button button_alt">При получении</button>
-					</div>
+				  <h2 class="modal__title">Способ оплаты</h2>
+				  <div class="order__buttons">
+					<button name="card" 
+						   type="button" 
+						   class="button button_alt">Онлайн</button>
+					<button name="cash" 
+						   type="button" 
+						   class="button button_alt">При получении</button>
+				  </div>
 				</div>
 				<label class="order__field">
-					<span class="form__label modal__title">Адрес доставки</span>
-					<input name="address" class="form__input" type="text" placeholder="Введите адрес" />
+				  <span class="form__label modal__title">Адрес доставки</span>
+				  <input name="address" 
+						class="form__input" 
+						type="text" 
+						placeholder="Введите адрес"
+						required>
 				</label>
-			</div>
-			<div class="modal__actions">
-				<button type="submit" disabled class="button order__button">Далее</button>
-				<span class="form__errors"></span>
-			</div>
-		</form>
-	</template>
+			  </div>
+			  <div class="modal__actions">
+				<button type="submit" 
+					   class="button order__button" 
+					   disabled>Далее</button>
+			  </div>
+			</form>
+		  </div>
+		</div>
+	  </template>
 
 	<template id="contacts">
 		<form class="form" name="contacts">
