--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -207,40 +207,32 @@
 	</template>
 
 	<template id="order">
-		<div class="modal__container">
-		  <button class="modal__close" aria-label="закрыть"></button>
-		  <div class="modal__content">
-			<form class="form" name="order">
-			  <div class="order">
-				<div class="order__field">
-				  <h2 class="modal__title">Способ оплаты</h2>
-				  <div class="order__buttons">
-					<button name="card" 
-						   type="button" 
-						   class="button button_alt">Онлайн</button>
-					<button name="cash" 
-						   type="button" 
-						   class="button button_alt">При получении</button>
-				  </div>
-				</div>
-				<label class="order__field">
-				  <span class="form__label modal__title">Адрес доставки</span>
-				  <input name="address" 
-						class="form__input" 
-						type="text" 
-						placeholder="Введите адрес"
-						required>
-				</label>
+		<form class="form" name="order">
+		  <div class="order">
+			<div class="order__field">
+			  <h2 class="modal__title">Способ оплаты</h2>
+			  <div class="order__buttons">
+				<button name="card" type="button" class="button button_alt">Онлайн</button>
+				<button name="cash" type="button" class="button button_alt">При получении</button>
 			  </div>
-			  <div class="modal__actions">
-				<button type="submit" 
-					   class="button order__button" 
-					   disabled>Далее</button>
-			  </div>
-			</form>
+			</div>
+			<label class="order__field">
+			  <span class="form__label modal__title">Адрес доставки</span>
+			  <input 
+				name="address" 
+				class="form__input" 
+				type="text" 
+				placeholder="Введите адрес"
+				minlength="6"
+				required
+			  >
+			</label>
 		  </div>
-		</div>
-	  </template>
+		  <div class="modal__actions">
+			<button type="submit" class="button order__button" disabled>Далее</button>
+		  </div>
+		</form>
+	</template>
 
 	<template id="contacts">
 		<form class="form" name="contacts">
