--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -230,7 +230,7 @@
 		  </div>
 		  <div class="modal__actions">
 			<button type="submit" class="button order__button" disabled>Далее</button>
-			<div class="order-errors form-errors"></div>
+			<div class="order-errors form__errors"></div>
 		  </div>
 		</form>
 	</template>
@@ -249,7 +249,7 @@
 			</div>
 			<div class="modal__actions">
 				<button type="submit" disabled class="button">Оплатить</button>
-				<div class="contacts-errors form-errors"></div>
+				<div class="contacts-errors form__errors"></div>
 			</div>
 		</form>
 	</template>
